deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: wedoo
  namespace: wedoo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: wedoo-app
  template:
    metadata:
      labels:
        app: wedoo-app
    spec:
      containers:
      - name: wedoo-app
        image: vadim26rus/wedoo:0.4-alpine
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: my-dockerhub-secret
