ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedoo-service
spec:
  selector:
    app: wedoo-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wedoo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: wedoo-service
            port:
              number: 3000
      - path: /css
        pathType: Prefix
        backend:
          service:
            name: wedoo-service
            port:
              number: 3000
      - path: /images
        pathType: Prefix
        backend:
           service:
             name: wedoo-service
             port:
               number: 3000

      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: wedoo-service
            port:
              number: 3000
